# webrtc

./: .codacy.yaml  .codecov.yml  .gitignore  .golangci.yml  .goreleaser.yml  .travis.yml  AUTHORS.txt  BUILD.bazel  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  api.go  api_js.go  api_test.go  apiobject.go  atomicbool.go  atomicuint.go  atomicuint_test.go  bundlepolicy.go  bundlepolicy_test.go  bwe_media_sender_test.go  bwe_network_test.go  bwe_peerconnection_test.go  bwe_test.go  certificate.go  certificate_js_test.go  certificate_test.go  codec.go  codec_test.go  codecov.yml  commit_msg.txt  configuration.go  configuration_common.go  configuration_js.go  configuration_test.go  constants.go  datachannel.go  datachannel_go_test.go  datachannel_js.go  (+288 more)
examples/: BUILD.bazel  README.md  example.html  examples.go  examples.json  index.html
examples/bandwidth-estimation-from-disk/: BUILD.bazel  README.md  main.go
examples/broadcast/: BUILD.bazel  README.md  drawio  main.go
examples/broadcast/jsfiddle/: demo.css  demo.details  demo.html  demo.js
examples/custom-logger/: BUILD.bazel  README.md  drawio  main.go
examples/data-channels/: BUILD.bazel  README.md  both_only_printf  both_print_and_log  drawio  main.go  out  out.txt  out_100_to_500.txt  out_100ms.txt  out_1500  out_1500_again  out_dyn  out_print_dyn  out_trace
examples/data-channels-close/: README.md  drawio  main.go
examples/data-channels-close/jsfiddle/: demo.html  demo.js
examples/data-channels-create/: README.md  drawio  main.go
examples/data-channels-create/jsfiddle/: demo.details  demo.html  demo.js
examples/data-channels-detach/: BUILD.bazel  README.md  drawio  main.go
examples/data-channels-detach-create/: README.md  drawio  main.go
examples/data-channels-detach/jsfiddle/: BUILD.bazel  demo.html  demo.js  main.go
examples/data-channels-flow-control/: BUILD.bazel  README.md  drawio  main.go
examples/data-channels-simple/: README.md  demo.html  main.go
examples/data-channels-whip-whep-like/: README.md  index.html  main.go
examples/data-channels/jsfiddle/: BUILD.bazel  demo.details  demo.html  demo.js  main.go
examples/delete-transceiver/: README.md  index.html  main.go
examples/echo/: README.md  main.go
examples/echo/jsfiddle/: demo.details  demo.html  demo.js
examples/ffmpeg-webrtc/: README.md  camera.go  configurator.go  devicevalidator.go  eventlistener.go  go.mod  go.sum  handlers.go  main.go  server.go  websocket.go
examples/gocv-to-webrtc/: README.md  main.go
examples/gocv-to-webrtc/static/: index.html
examples/gst-v4l2-alsa/: README.md  main.go
examples/gstreamer/: main.go
examples/gstreamer-receive/: README.md  main.go
examples/gstreamer-receive/gst/: gst.c  gst.go  gst.h
examples/gstreamer-receive/jsfiddle/: demo.html  (+1 more)
examples/gstreamer-send/: README.md  main.go
examples/gstreamer-send-offer/: README.md  main.go
examples/ice-proxy/: README.md  answer.go  go.mod  go.sum  index.html  main.go  misc.go  offer.go  proxy.go  turn.go
examples/ice-restart/: BUILD.bazel  README.md  drawio  index.html  main.go
examples/ice-single-port/: BUILD.bazel  README.md  index.html  main.go
examples/ice-tcp/: BUILD.bazel  README.md  drawio  index.html  main.go
examples/insertable-streams/: BUILD.bazel  README.md  drawio  main.go
examples/janus-gateway/: README.md
examples/on-negotiation-needed/: README.md  index.html  main.go  main.js
examples/ortc/: BUILD.bazel  README.md  drawio  main.go
examples/ortc-media/: README.md  main.go
examples/ortc-quic/: main.go
examples/pion-to-pion/: README.md  docker-compose.yml  drawio  test.sh
examples/pion-to-pion-trickle/: README.md
examples/play-from-device/: README.md  index.html  main.go
examples/play-from-disk/: BUILD.bazel  README.md  drawio  main.go
examples/play-from-disk-fec/: README.md  main.go
examples/play-from-disk-playlist-control/: README.md  main.go
examples/play-from-disk-renegotation/: BUILD.bazel  README.md  drawio  index.html  main.go
examples/play-from-disk-renegotiation/: README.md  index.html  main.go
examples/play-h264-from-disk/: README.md  h264.go  main.go  sample.sh
examples/proxy/: README.md  main.go
examples/quick-switch/: README.md  index.html  main.go
examples/read-rtx/: README.md  main.go
examples/reflect/: BUILD.bazel  README.md  drawio  main.go  new_drawio
examples/repacketize/: README.md  index.html  index.js  main.go
examples/rtcp-processing/: BUILD.bazel  README.md  main.go
examples/rtp-forwarder/: BUILD.bazel  README.md  drawio  main.go  rtp-forwarder.sdp  rtp-forwarder.sdp.license
examples/rtp-to-webrtc/: BUILD.bazel  README.md  drawio  main.go
examples/rtp2webrtc/: README.md  main.go
examples/save-to-disk/: BUILD.bazel  README.md  drawio  ivf-writer.go  main.go
examples/save-to-disk-av1/: BUILD.bazel  README.md  main.go
examples/save-to-disk-vp9/: README.md  main.go
examples/sctp-interleaving-inspect/: README.md  index.html  main.go
examples/sfu/: README.md  main.go
examples/sfu-file/: README.md  main.go
examples/sfu-minimal/: README.md  main.go
examples/sfu-ws/: README.md  broadcast_data.go  go.mod  go.sum  main.go  room.go  sfu.html  web.go
examples/simulcast/: BUILD.bazel  README.md  drawio  main.go
examples/stats/: README.md  main.go
examples/stun/: main.go
examples/swap-tracks/: BUILD.bazel  README.md  drawio  main.go
examples/trickle-ice/: BUILD.bazel  README.md  index.html  main.go
examples/util/: util.go
examples/vendor-wasm/: readme.md
examples/vnet/: README.md
examples/warp/: index.html  main.go
examples/whip-whep/: README.md  index.html  main.go
examples/whip-whep-data-channels/: index.html  main.go
internal/fmtp/: BUILD.bazel  av1.go  fmtp.go  fmtp_test.go  h264.go  h264_test.go  vp9.go
internal/mux/: BUILD.bazel  connection.go  endpoint.go  mux.go  mux_test.go  muxfunc.go
internal/util/: BUILD.bazel  util.go  util_test.go
pkg/media/: BUILD.bazel  ivf-writer.go  ivf-writer_test.go  media.go  media_test.go  opus-writer.go  opus-writer_test.go
pkg/null/: BUILD.bazel  null.go  null_test.go
(+521 files in other folders)
