load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/pion/webrtc/v3
go_library(
    name = "webrtc",
    srcs = [
        "api.go",
        "api_js.go",
        "atomicbool.go",
        "bundlepolicy.go",
        "certificate.go",
        "configuration.go",
        "configuration_common.go",
        "configuration_js.go",
        "constants.go",
        "datachannel.go",
        "datachannel_js.go",
        "datachannel_js_detach.go",
        "datachannelinit.go",
        "datachannelmessage.go",
        "datachannelparameters.go",
        "datachannelstate.go",
        "dtlsfingerprint.go",
        "dtlsparameters.go",
        "dtlsrole.go",
        "dtlstransport.go",
        "dtlstransport_js.go",
        "dtlstransportstate.go",
        "errors.go",
        "gathering_complete_promise.go",
        "ice_go.go",
        "icecandidate.go",
        "icecandidateinit.go",
        "icecandidatepair.go",
        "icecandidatetype.go",
        "icecomponent.go",
        "iceconnectionstate.go",
        "icecredentialtype.go",
        "icegatherer.go",
        "icegathererstate.go",
        "icegatheringstate.go",
        "icegatheroptions.go",
        "icemux.go",
        "iceparameters.go",
        "iceprotocol.go",
        "icerole.go",
        "iceserver.go",
        "iceserver_js.go",
        "icetransport.go",
        "icetransport_js.go",
        "icetransportpolicy.go",
        "icetransportstate.go",
        "interceptor.go",
        "js_utils.go",
        "mediaengine.go",
        "networktype.go",
        "oauthcredential.go",
        "offeransweroptions.go",
        "operations.go",
        "peerconnection.go",
        "peerconnection_js.go",
        "peerconnectionstate.go",
        "rtcpfeedback.go",
        "rtcpmuxpolicy.go",
        "rtpcapabilities.go",
        "rtpcodec.go",
        "rtpcodingparameters.go",
        "rtpdecodingparameters.go",
        "rtpencodingparameters.go",
        "rtpreceiveparameters.go",
        "rtpreceiver.go",
        "rtpreceiver_go.go",
        "rtpreceiver_js.go",
        "rtpsender.go",
        "rtpsender_js.go",
        "rtpsendparameters.go",
        "rtptransceiver.go",
        "rtptransceiver_js.go",
        "rtptransceiverdirection.go",
        "rtptransceiverinit.go",
        "sctpcapabilities.go",
        "sctptransport.go",
        "sctptransport_js.go",
        "sctptransportstate.go",
        "sdp.go",
        "sdpsemantics.go",
        "sdptype.go",
        "sessiondescription.go",
        "settingengine.go",
        "settingengine_js.go",
        "signalingstate.go",
        "srtp_writer_future.go",
        "stats.go",
        "stats_go.go",
        "track_local.go",
        "track_local_static.go",
        "track_local_static_extension.go",
        "track_remote.go",
        "webrtc.go",
    ],
    importpath = "github.com/pion/webrtc/v3",
    visibility = ["//visibility:public"],
    deps = [
        "//webrtc/internal/fmtp",
        "//webrtc/pkg/rtcerr",
        "@com_github_pion_dtls_v2//:dtls",
        "@com_github_pion_ice_v2//:ice",
        "@com_github_pion_interceptor//:interceptor",
        "@com_github_pion_logging//:logging",
        "@com_github_pion_rtp//:rtp",
        "@com_github_pion_sdp_v3//:sdp",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//srtp",
            "//webrtc/internal/mux",
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_dtls_v2//pkg/crypto/fingerprint",
            "@com_github_pion_interceptor//pkg/nack",
            "@com_github_pion_interceptor//pkg/report",
            "@com_github_pion_interceptor//pkg/twcc",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//codecs",
            "@com_github_pion_sctp//:sctp",
            "@com_github_pion_transport//packetio",
            "@com_github_pion_transport//vnet",
            "@org_golang_x_net//proxy",
        ],
        "//conditions:default": [],
    }) + select({
        "@io_bazel_rules_go//go/platform:aix_ppc64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:android_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:android_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:android_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:android_arm64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:darwin_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:illumos_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:ios_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:ios_arm64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:js_wasm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64le": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_mipsle": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64le": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_riscv64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:plan9_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:plan9_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:plan9_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:solaris_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:windows_386": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "@io_bazel_rules_go//go/platform:windows_arm": [
            "@com_github_pion_datachannel//:datachannel",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "webrtc_test",
    srcs = [
        "api_test.go",
        "bundlepolicy_test.go",
        "certificate_test.go",
        "configuration_test.go",
        "datachannel_go_test.go",
        "datachannel_test.go",
        "datachannelstate_test.go",
        "dtlsrole_test.go",
        "dtlstransport_test.go",
        "dtlstransportstate_test.go",
        "gathering_complete_promise_example_test.go",
        "icecandidate_test.go",
        "icecandidateinit_test.go",
        "icecandidatetype_test.go",
        "icecomponent_test.go",
        "iceconnectionstate_test.go",
        "icecredentialtype_test.go",
        "icegatherer_test.go",
        "icegathererstate_test.go",
        "icegatheringstate_test.go",
        "iceprotocol_test.go",
        "icerole_test.go",
        "iceserver_test.go",
        "icetransport_test.go",
        "icetransportpolicy_test.go",
        "icetransportstate_test.go",
        "interceptor_test.go",
        "mediaengine_test.go",
        "networktype_test.go",
        "operations_test.go",
        "ortc_datachannel_test.go",
        "ortc_media_test.go",
        "ortc_test.go",
        "peerconnection_close_test.go",
        "peerconnection_go_test.go",
        "peerconnection_js_test.go",
        "peerconnection_media_test.go",
        "peerconnection_renegotiation_test.go",
        "peerconnection_test.go",
        "peerconnectionstate_test.go",
        "rtcpmuxpolicy_test.go",
        "rtpreceiver_go_test.go",
        "rtpreceiver_test.go",
        "rtpsender_test.go",
        "rtptransceiver_test.go",
        "rtptransceiverdirection_test.go",
        "sctptransport_test.go",
        "sctptransportstate_test.go",
        "sdp_test.go",
        "sdpsemantics_test.go",
        "sdptype_test.go",
        "sessiondescription_test.go",
        "settingengine_test.go",
        "signalingstate_test.go",
        "stats_go_test.go",
        "track_local_static_test.go",
        "track_test.go",
        "vnet_test.go",
    ],
    embed = [":webrtc"],
    deps = [
        "//webrtc/pkg/rtcerr",
        "@com_github_pion_ice_v2//:ice",
        "@com_github_pion_sdp_v3//:sdp",
        "@com_github_pion_transport//test",
        "@com_github_stretchr_testify//assert",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//webrtc/internal/util",
            "//webrtc/pkg/media",
            "@com_github_pion_datachannel//:datachannel",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_interceptor//pkg/mock",
            "@com_github_pion_logging//:logging",
            "@com_github_pion_randutil//:randutil",
            "@com_github_pion_rtcp//:rtcp",
            "@com_github_pion_rtp//:rtp",
            "@com_github_pion_transport//vnet",
            "@com_github_stretchr_testify//require",
        ],
        "//conditions:default": [],
    }),
)
