load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "examples_lib",
    srcs = ["examples.go"],
    importpath = "github.com/pion/webrtc/v3/examples",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "examples",
    embed = [":examples_lib"],
    visibility = ["//visibility:public"],
)
