load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "data-channels-detach_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/data-channels-detach",
    visibility = ["//visibility:private"],
    deps = [
        "//webrtc",
        "//webrtc/examples/internal/signal",
    ],
)

go_binary(
    name = "data-channels-detach",
    embed = [":data-channels-detach_lib"],
    visibility = ["//visibility:public"],
)
