load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "data-channels-flow-control_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/data-channels-flow-control",
    visibility = ["//visibility:private"],
    deps = ["//webrtc"],
)

go_binary(
    name = "data-channels-flow-control",
    embed = [":data-channels-flow-control_lib"],
    visibility = ["//visibility:public"],
)
