load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ice-restart_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/ice-restart",
    visibility = ["//visibility:private"],
    deps = ["//webrtc"],
)

go_binary(
    name = "ice-restart",
    embed = [":ice-restart_lib"],
    visibility = ["//visibility:public"],
)
