load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ice-single-port_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/ice-single-port",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//webrtc",
            "@com_github_pion_ice_v2//:ice",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "ice-single-port",
    embed = [":ice-single-port_lib"],
    visibility = ["//visibility:public"],
)
